subcommit: create account ok

--- a/public/index.html
+++ b/public/index.html
@@ -61,5 +61,12 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_%REACT_APP_RECAPTCHA_CLIENT_KEY%"></script>
+    <script>
+      // get token from fetch request
+      // const token = await res.json();
+
+      // set token in cookie
+      // document.cookie = `token=${token}`
+    </script>
   </body>
 </html>
