routing + menu refacto ok

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_%REACT_APP_RECAPTCHA_CLIENT_KEY%"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_%REACT_APP_RECAPTCHA_CLIENT_KEY%"></script> -->
     <script>
       // get token from fetch request
       // const token = await res.json();
