--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
     />
 
-    <title>React App</title>
+    <title>ReCom</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
